Ensure rendering canvas is vertically aligned

--- a/BlazorClient/wwwroot/assets/css/sim.css
+++ b/BlazorClient/wwwroot/assets/css/sim.css
@@ -27,6 +27,12 @@ app
   max-height: 100%;
 }
 
+canvas
+{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #render
 {
   flex: 1;
@@ -35,10 +41,11 @@ app
   background-color: lightgoldenrodyellow;
 }
 
-canvas
+#render > canvas
 {
-  max-width: 100%;
-  max-height: 100%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #stats
